@@ -6,7 +6,7 @@
     <name>JMRI</name>
     <groupId>org.jmri</groupId>
     <artifactId>jmri</artifactId>
-    <version>5.11.2-SNAPSHOT</version>
+    <version>5.11.4-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <release.build_user>${user.name}</release.build_user>
@@ -26,7 +26,7 @@
         <jackson-databind.version>2.13.4.2</jackson-databind.version>
         <jackson-annotations.version>2.13.4</jackson-annotations.version>
         <jogamp.version>2.5.0</jogamp.version>
-        <openlcb.version>0.8.2</openlcb.version>
+        <openlcb.version>0.8.5</openlcb.version>
         <netbeans.version>RELEASE150</netbeans.version>
         <jacoco.version>0.8.11</jacoco.version>
         <jacoco.reportDir>${basedir}/target/</jacoco.reportDir>
@@ -40,7 +40,7 @@
         <junit5.version>5.9.1</junit5.version>
         <junit.platform.version>1.9.1</junit.platform.version>
         <ant.jvm.args></ant.jvm.args>
-        <argLine>-Xmx1536m -Duser.language=en -Duser.region=US -Dnashorn.args=--no-deprecation-warning</argLine>
+        <argLine>-Xmx1536m -Duser.language=en -Duser.region=US -Dnashorn.args=--no-deprecation-warning --add-exports java.desktop/sun.awt=ALL-UNNAMED</argLine>
         <!-- define argLines to allow running surefire:test -->
         <surefire.argLine></surefire.argLine>
         <failsafe.argLine></failsafe.argLine>
@@ -1503,7 +1503,11 @@
             <!-- not yet available on a maven repository. -->
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/openlcb.jar</systemPath>
-
+        </dependency>
+        <dependency>
+            <groupId>com.github.weisj</groupId>
+            <artifactId>darklaf-core</artifactId>
+            <version>3.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.usb4java</groupId>
@@ -1792,6 +1796,11 @@
             <version>1.8.1</version>
         </dependency>
  		<!-- //BiDiB -->
+      <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>0.10.2</version>
+      </dependency>
     </dependencies>
 
     <repositories>
